#+TITLE: Changelog

* Unreleased

* 2024-12-19
** Added

** Updated
   - dev: clojure-lint-action v3 in lint-review workflow
   - dev: megalinter java v8.3.0 in megalinter workflow
   - dev: setup-clojure 13.1, clj-kondo 2024.11.14, cljstyle 0.17.642 in quality-checks workflow
   - dev: markdown lint default practicalli configuration
   - dev: github repository attributes for edn project
   - aliases: update library versions using `make outdated`

   | :name                                | :current                                 | :latest                                  |
   | ------------------------------------ | ---------------------------------------- | ---------------------------------------- |
   | cider/cider-nrepl                    | 0.50.2                                   | 0.50.3                                   |
   | clj-commons/clj-yaml                 | 1.0.28                                   | 1.0.29                                   |
   | com.github.flow-storm/clojure        | 1.12.0-1                                 | 1.12.0-2                                 |
   | com.github.flow-storm/flow-storm-dbg | 3.17.4                                   | 4.0.2                                    |
   | com.github.liquidz/antq              | 2.10.1241                                | 2.11.1250                                |
   | com.github.seancorfield/next.jdbc    | 1.3.955                                  | 1.3.981                                  |
   | djblue/portal                        | 0.58.2                                   | 0.58.4                                   |
   | mvxcvi/cljstyle                      | 9be5bb9ed678a1e73670a3df3ece08bb22362441 | d40540a7a8e3efdd18f10cb288864e0ca15c7f8f |


* 2024-11-03
** Added
   - alias: `:security/nvd-scan` and `:security/nvd-fix` library vulnerabilities scan and fix

** Updated
   - dev: megalinter v8.1.0 supports Grafana dashboards in flavors