@@ -1,12 +1,14 @@
 # ------------------------------------------
-# Makefile: Clojure Service
+# Practicalli Makefile
 #
 # Consistent set of targets to support local development of Clojure
 # and build the Clojure service during CI deployment
 #
+# `-` before a command ignores any errors returned
+
 # Requirements
 # - cljstyle
-# - Clojure CLI aliases
+# - Clojure CLI aliases from practicalli/clojure-cli-config
 #   - `:env/dev` to include `dev` directory on class path
 #   - `:env/test` to include `test` directory and libraries to support testing
 #   - `:test/run` to run kaocha kaocha test runner and supporting paths and dependencies
@@ -33,8 +35,8 @@ HELP-DESCRIPTION-SPACING := 24
 # EDN-FILES := $(wildcard *.edn)
 
 # Tool variables
-# MEGALINTER_RUNNER = npx mega-linter-runner --flavor documentation --env "'MEGALINTER_CONFIG=.github/config/megalinter.yaml'" --remove-container
-MEGALINTER_RUNNER = npx mega-linter-runner --flavor java --env "'MEGALINTER_CONFIG=.github/config/megalinter.yaml'" --remove-container
+# MEGALINTER_RUNNER := npx mega-linter-runner --flavor documentation --env "'MEGALINTER_CONFIG=.github/config/megalinter.yaml'" --remove-container
+MEGALINTER_RUNNER := npx mega-linter-runner --flavor java --env "'MEGALINTER_CONFIG=.github/config/megalinter.yaml'" --remove-container
 # ------------------------------------ #
 
 # ------- Help ----------------------- #
@@ -46,7 +48,7 @@ help:  ## Describe available tasks in Makefile
 	awk -F ':.*?## ' 'NF==2 {printf "\033[36m  %-$(HELP-DESCRIPTION-SPACING)s\033[0m %s\n", $$1, $$2}'
 # ------------------------------------ #
 
-# ------- Clojure Projects -------- #
+# -- Clojure Projects ---------------- #
 project-service:  ## New project with practicalli/service template
 	$(info --------- Create Service Project ---------)
 	clojure -T:project/create :template practicalli/service :name practicalli/gameboard
@@ -70,25 +72,50 @@ landing-page:  ## New project with practicalli/landing-page template local
 outdated: ## Check deps.edn & GitHub actions for new versions
 	$(info --------- Search for outdated libraries ---------)
 	- clojure -T:search/outdated > $(OUTDATED_FILE)
+# ------------------------------------ #
 
 # ------- Clojure Workflow -------- #
-repl:  ## Run Clojure REPL with rich terminal UI (Rebel Readline)
+rebel:  ## Run Clojure REPL with rich terminal UI (Rebel Readline)
 	$(info --------- Run Rebel REPL ---------)
-	clojure -M:test/env:repl/reloaded
+	clojure -M:dev/env:test/env:repl/rebel
 
+reloaded:  ## Run Clojure REPL with rich terminal UI (Rebel Readline)
+	$(info --------- Run Rebel REPL ---------)
+	clojure -M:dev/env:test/env:repl/reloaded
 
-# deps: deps.edn  ## Prepare dependencies for test and dist targets
-#		$(info --------- Download test and service libraries ---------)
-#		clojure -P -X:build
+deps: deps.edn  ## Prepare dependencies for test and dist targets
+	$(info --------- Download test and service libraries ---------)
+	clojure -P -X:build
 
-# dist: deps build-uberjar ## Build and package Clojure service
-#		$(info --------- Build and Package Clojure service ---------)
-
-# Remove files and directories after build tasks
-# `-` before the command ignores any errors returned
-clean:  ## Clean build temporary files
+clean:  ## Clean Clojure tooling temporary files
 	$(info --------- Clean Clojure classpath cache ---------)
 	- rm -rf ./.cpcache ./.clj-kondo ./.lsp
+# ------------------------------------ #
+
+# -------- Build tasks --------------- #
+build-config: ## Pretty print build configuration
+	$(info --------- View current build config ---------)
+	clojure -T:build config
+
+# build-jar: ## Build a jar archive of Clojure project
+		$(info --------- Build library jar ---------)
+		clojure -T:build jar
+
+# build-uberjar: ## Build a uberjar archive of Clojure project & Clojure runtime
+		$(info --------- Build service Uberjar  ---------)
+		clojure -T:build uberjar
+
+build-uberjar-echo: ## Build a uberjar archive of Clojure project & Clojure runtime
+	$(info --------- Build service Uberjar  ---------)
+	$(info Prerequisites newer than target)
+	echo $?
+	clojure -T:build uberjar
+
+build-clean: ## Clean build assets or given directory
+	$(info --------- Clean Build  ---------)
+	clojure -T:build clean
+
+dist: deps build-uberjar ## Build and package Clojure service
 # ------------------------------------ #
 
 # ------- Testing -------------------- #
@@ -101,39 +128,20 @@ test-profile:  ## Profile unit test speed, showing 3 slowest tests
 		clojure -M:test/env:test/run --plugin  kaocha.plugin/profiling
 
 test:  ## Run unit tests - stoping on first error
-		$(info --------- Runner for unit tests ---------)
-		clojure -X:test/env:test/run
+	$(info --------- Runner for unit tests ---------)
+	clojure -X:test/env:test/run
 
 test-all:  ## Run all unit tests regardless of failing tests
-		$(info --------- Runner for all unit tests ---------)
-		clojure -X:test/env:test/run :fail-fast? false
+	$(info --------- Runner for all unit tests ---------)
+	clojure -X:test/env:test/run :fail-fast? false
 
 test-watch:  ## Run tests when changes saved, stopping test run on first error
-		$(info --------- Watcher for unit tests ---------)
-		clojure -X:test/env:test/run :watch? true
+	$(info --------- Watcher for unit tests ---------)
+	clojure -X:test/env:test/run :watch? true
 
 test-watch-all:  ## Run all tests when changes saved, regardless of failing tests
-		$(info --------- Watcher for unit tests ---------)
-		clojure -X:test/env:test/run :fail-fast? false :watch? true
-
-# ------------------------------------ #
-
-# -------- Build tasks --------------- #
-build-config: ## Pretty print build configuration
-	$(info --------- View current build config ---------)
-	clojure -T:build config
-
-# build-jar: ## Build a jar archive of Clojure project
-#		$(info --------- Build library jar ---------)
-#		clojure -T:build jar
-
-# build-uberjar: ## Build a uberjar archive of Clojure project & Clojure runtime
-#		$(info --------- Build service Uberjar  ---------)
-#		clojure -T:build uberjar
-
-build-clean: ## Clean build assets or given directory
-	$(info --------- Clean Build  ---------)
-	clojure -T:build clean
+	$(info --------- Watcher for unit tests ---------)
+	clojure -X:test/env:test/run :fail-fast? false :watch? true
 
 # ------------------------------------ #
 
@@ -165,27 +173,56 @@ megalinter-upgrade:  ## Upgrade MegaLinter config to latest version
 	npx mega-linter-runner@latest --upgrade
 # ------------------------------------ #
 
+# ------- Version Control ------------ #
+git-sr:  ## status list of git repos under current directory
+	$(info --------- Multiple Git Status ---------)
+	mgitstatus -e --flatten
+
+git-status:  ## status details of git repos under current directory
+	$(info --------- Multiple Git Status ---------)
+	mgitstatus
+# ------------------------------------ #
+
+# ------- Documentation Generation ---------- #
+docs:  ## Run mkdocs server
+	$(info --------- Mkdocs Local Server ---------)
+	mkdocs serve --dev-addr localhost:7777
+# ------------------------------------ #
+
 # ------- Docker Containers ---------- #
 # docker-build:  ## Build Clojure project and run with docker compose
 #		$(info --------- Docker Compose Build ---------)
 #		docker compose up --build --detach
 
 # docker-build-clean:  ## Build Clojure project and run with docker compose, removing orphans
-#		$(info --------- Docker Compose Build - remove orphans ---------)
-#		docker compose up --build --remove-orphans --detach
+	$(info --------- Docker Compose Build - remove orphans ---------)
+	docker compose up --build --remove-orphans --detach
 
 # docker-down:  ## Shut down containers in docker compose
-#		$(info --------- Docker Compose Down ---------)
-#		docker compose down
+	$(info --------- Docker Compose Down ---------)
+	docker compose down
 
+docker-inspect:  ## Inspect given docker image - image-id=12e45fg89
+	$(info --------- Docker Image Prune ---------)
+	docker inspect --format='{{json .Config}}' $(image-id) | jq
 
-# swagger-editor:  ## Start Swagger Editor in Docker
-#		$(info --------- Run Swagger Editor at locahost:8282 ---------)
-#		docker compose -f swagger-editor.yml up -d swagger-editor
+docker-image-prune:  ## Prune docker images
+	$(info --------- Docker Image Prune ---------)
+	docker image prune
 
-# swagger-editor-down:  ## Stop Swagger Editor in Docker
-#		$(info --------- Run Swagger Editor at locahost:8282 ---------)
-#		docker compose -f swagger-editor.yml down
+docker-container-prune:  ## Prune docker containers
+	$(info --------- Docker Container Prune ---------)
+	docker container prune
+
+docker-prune: docker-image-prune docker-image-prune  ## Prune docker images and containers
+
+swagger-editor:  ## Start Swagger Editor in Docker
+	$(info --------- Run Swagger Editor at locahost:8282 ---------)
+	docker compose -f swagger-editor.yaml up -d swagger-editor --detatch
+
+swagger-editor-down:  ## Stop Swagger Editor in Docker
+	$(info --------- Run Swagger Editor at locahost:8282 ---------)
+	docker compose -f swagger-editor.yaml down
 # ------------------------------------ #
 
 # ------ Continuous Integration ------ #
@@ -193,13 +230,12 @@ megalinter-upgrade:  ## Upgrade MegaLinter config to latest version
 # https://makefiletutorial.com/#delete_on_error
 
 # TODO: focus runner on ^:integration` tests
-# test-ci: deps  ## Test runner for integration tests
-#		$(info --------- Runner for integration tests ---------)
-#		clojure -P -X:test/env:test/run
+test-ci: deps  ## Test runner for integration tests
+	$(info --------- Runner for integration tests ---------)
+	clojure -P -X:test/env:test/run
 
 # Run tests, build & package the Clojure code and clean up afterward
 # `make all` used in Docker builder stage
 .DELETE_ON_ERROR:
 all: test-ci dist clean  ## Call test-ci dist and clean targets, used for CI
-
 # ------------------------------------ #
